# movie-api-rs

./: .env  Cargo.toml  Insomnia-Document.json  README.md  docker-compose.dev-env.yml  sqlx-data.json
configuration/: default.yaml
db/: Dockerfile
db/migrations/: 20220505195412_table_movies_create.sql
src/: configuration.rs  controllers.rs  lib.rs  main.rs  startup.rs  store.rs  telemetry.rs
src/controllers/: health.rs  movies.rs
src/store/: memory_store.rs  sql_store.rs  store.rs
